@@ -5,17 +5,20 @@ logLik.svyglm<-function(object,...){
    object$deviance/-2
 }
 
-AIC.svyglm<-function(object,...,k=2){
+AIC.svyglm<-function(object,...,k=2,null_has_intercept=TRUE){
 	if (length(list(...))){
-		do.call(rbind,lapply(list(object,...),extractAIC,k=k))
+		do.call(rbind,lapply(list(object,...),extractAIC,k=k,null_has_intercept=null_has_intercept))
     } else {
-	   extractAIC(object,k=k)
+	   extractAIC(object,k=k,null_has_intercept=null_has_intercept)
     }
 }
-extractAIC.svyglm<-function(fit,scale,k=2,...){
-	if (length(attr(terms(fit),"factors"))){
-	    r<-regTermTest(fit, delete.response(formula(fit)), method="LRT")
-	    deltabar<-mean(r$lambda)
+extractAIC.svyglm<-function(fit,scale,k=2,...,null_has_intercept=TRUE){
+    if (length(attr(terms(fit),"factors"))){
+        ftest<-delete.response(formula(fit))
+        if (!null_has_intercept)
+            ftest<-update(ftest,.~.+`1`)
+        r<-regTermTest(fit, ftest, method="LRT")
+        deltabar<-mean(r$lambda)
 	} else {
 	    r<-list(lambda=0)
 	    deltabar<-NaN
@@ -35,7 +38,7 @@ BIC.svyglm<-function(object,...,maximal){
 	
 }
 	
-dBIC<-function(modela,modelM){
+dBIC<-function(modela, modelM){
 	pm<-modela$rank
 	pM<-modelM$rank	
 
@@ -76,3 +79,44 @@ AIC.svycoxph<-function (object, ..., k = 2)
         extractAIC(object, k = k)
     }
 }
+
+
+##  special-case the Gaussian
+## dAIC=-2\max_{\beta,\sigma^2}\log\ell +2p= n\log\mathrm{RSS}-n\log n +n +n\log 2\pi +2p\bar\delta
+
+
+extractAIC.svylm<-function(fit,scale,k=2,...,null_has_intercept=TRUE){
+    sfit <- summary(fit)
+    n<-sfit$df.null
+    Nhat<-sum(w<-fit$prior.weights)
+    sigma2hat<-coef(sfit$dispersion)
+
+    minus2ellhat<- Nhat*log(sigma2hat) +Nhat +Nhat*log(2*pi)
+
+    V0<-fit$naive.cov
+    V<-vcov(fit)
+    if (null_has_intercept){
+        V0<-V0[-1,-1,drop=FALSE]
+        V<-V[-1,-1,drop=FALSE]
+    }
+
+    ## for mu
+    Delta_mu<-solve(V0,V) 
+
+    ## Now for sigma2
+    y<-fit$y
+    muhat<-fit$linear.predictors
+    Isigma2<-Nhat/(2*sigma2hat^2)
+    Usigma2<- -1/(2*sigma2hat)+ (y-muhat)^2/(2*sigma2hat^2)
+    Hsigma2<- sum(w*Usigma2^2)
+    Deltasigma2<-Hsigma2/Isigma2
+    
+    ## combine
+    deltabar<-mean(c(diag(Delta_mu), Deltasigma2))
+    eff.p<-sum(diag(Delta_mu))+Deltasigma2
+    aic <- minus2ellhat + k*eff.p
+        
+    c(eff.p=eff.p, AIC=aic,deltabar=deltabar)
+}
+
+
