@@ -46,6 +46,7 @@ requests from users, including:
   Steven Johnston
   David Eduardo Jorquera Petersen
   Lauren Kennedy
+  Ehsan Kharim
   Ward Kinkade
   Stas Kolenikov
   Franziska Kößler
@@ -77,6 +78,7 @@ requests from users, including:
   Andrew Robinson
   Ángel Rodríguez Laso
   Mark Rosenstein
+  Benjamin Schneider
   Dan Simpson
   Pam Shaw
   Lee Sieswerda
@@ -88,6 +90,7 @@ requests from users, including:
   Tobias Verbeke
   Renzo Vettori
   Chris Webb
+  Steve White
   Zhiwen Yao
   Thomas Yokota
   Diego Zardetto
